# zenith

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  server.json
examples/: README.md  hello.zen  markdown.zen  multipage.zen  stack.zen  stroke-align.zen  (+1 more)
zenith-scene/: Cargo.toml
zenith-scene/src/: color.rs  compile.rs  ir.rs  lib.rs
zenith-scene/src/compile/: anchor.rs  chain.rs  container.rs  crop.rs  ctx.rs  data_resolve.rs  effect.rs  field.rs  footnote.rs  image.rs  leaf.rs  line_jumps.rs  markdown_resolve.rs  mod.rs  paint.rs  pattern.rs  table.rs  table_flow.rs  tests.rs  text.rs  toc.rs  util.rs
zenith-scene/src/compile/chart/: bar.rs  entry.rs  legend.rs  mod.rs  pie.rs  scale.rs
zenith-scene/src/compile/container/: flow.rs  group.rs  instance.rs
zenith-scene/src/compile/field/: folio.rs  mod.rs  projection.rs  resolve.rs  section.rs
zenith-scene/src/compile/leaf/: common.rs  connector.rs  mod.rs  shape.rs
zenith-scene/src/compile/table/: emit.rs  layout.rs  place.rs
zenith-scene/src/compile/text/: chain_blocks.rs  chain_member.rs  ctx.rs  emit.rs  hyphen.rs  markdown_block.rs  measure.rs  mod.rs  pack.rs  shape.rs  text_node.rs  wrap.rs
zenith-scene/tests/: anchor.rs  chain_markdown.rs  containers.rs  markdown_block_layout.rs  pattern.rs  recipe.rs  shapes.rs  shapes_connectors.rs  shapes_effects.rs  table.rs  text.rs  text_code_link.rs
zenith-session/: Cargo.toml
zenith-session/src/: gc.rs  identity.rs  layout.rs  lib.rs  manifest.rs  retention.rs  runs.rs  scratch.rs  store.rs  tier2.rs
zenith-session/src/adapter/: fs.rs
(+217 files in other folders)
