[package]
name = "zenith-session"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dirs = "5"
flate2 = "1"
getrandom = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
